# Convnext_stardist

./: .gitignore
stardist/: .gitignore  README.md  pyproject.toml  requirements.txt
stardist/Analysis/Cell-cell interactions/: 1_microenvironment_analysis.ipynb
stardist/Analysis/Label_cells/: CODEX_tsne_cell_phenotypes.ipynb  cell_alignment_and_labelling_from_imseg_BTC.ipynb  cell_labelling_from_segmented_images.ipynb  cell_labelling_from_segmented_images_BTC.ipynb  cell_labelling_functions.py  cell_labelling_geojson_from_xy_centroids.ipynb  testing_register_coordinates.ipynb  wholeFT_SJ.ipynb
stardist/Analysis/Label_cells/registration_functions/: calculate_dislocation.py  calculate_image_registration.py  containers.py  (+4 more)
stardist/Analysis/separate_cells_manual_annotations/: 7_select_specific_contours.ipynb  8_separated_contours_geojsons.ipynb  manual_annotations_functions.py  s3_add_label_to_main_df.ipynb  util.py  write_features_functions.py
stardist/models/Big_PANIN/: thresholds.json
stardist/models/Big_Panin_healthy_nPOD/: thresholds.json
stardist/models/PDAC/: thresholds.json
stardist/models/cross_fetal_species/: thresholds.json
stardist/models/cross_fetal_species_alcian_blue/: thresholds.json
stardist/models/fallopian_tube/: README.txt  thresholds.json
stardist/workflow/: 1_train_test_2026.ipynb  2_Segment_WSIs_2026.ipynb  extract_features_functions_2026.py  functions_2026.py  training_functions_2026.py
stardist/workflow/individual_codes/: 1_train_model.ipynb  2_Segment_WSIs.ipynb  6_plot_contours_json_for_qupath.ipynb  temp_make_masks_AF.ipynb
(+107 files in other folders)
